tests/rosetta/out/Smalltalk/binary-digits.out
/tmp/binary-digits.st:9: parse error, expected ']'
