tests/rosetta/out/Smalltalk/binary-digits.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| toBin bits x i |
toBin := [:n | ((n = 0)) ifTrue: [
'0'.
] .
bits := ''.
x := n.
[(x > 0)] whileTrue: [.
bits := ((((x % 2) asString)) + bits).
x := (x / 2) asInteger.
].
.
bits. ].
0 to: 16 do: [:i |.
Transcript show: (toBin value: i) printString; cr.
].
.
